deploy/aperturedb-python-cc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: aperturedb-python-coverage
  name: aperturedb-python-coverage
  namespace: sta
spec:
  replicas: 1
  selector:
    matchLabels:
      service: aperturedb-python-coverage
  template:
    metadata:
      labels:
        service: aperturedb-python-coverage
    spec:
      containers:
          - name: aperturedb-python-coverage
            image: 684446431133.dkr.ecr.us-west-2.amazonaws.com/aperturedb-python-coverage:$VERSION
            ports:
              - containerPort: 80
            resources: {}
      restartPolicy: Always
