deploy/aperturedb-python-cc-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: aperturedb-python-coverage
  name: aperturedb-python-coverage
  namespace: sta
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 80
  selector:
    service: aperturedb-python-coverage
